--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 api.security.token.secret=my-secret-key
+
+rawg.api.key=${rawg}
+gemini.api.key=${GOOGLE_API_KEY}
